# ipub

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
docs/: PLAN.md  feishu-permissions.json
examples/notes/: docker-multistage.md  short-fragment.md  tent-reproduce.md
src/ipub/: __init__.py  cli.py  config.py  drafter.py  llm.py  reviewer.py  scanner.py  storage.py
src/ipub/connectors/: feishu.py
